# christmas-elf-officer

./: .gitignore  Cargo.toml  Dockerfile  README.md  hld.excalidraw
fakeaoc/: main.py  run.sh
fakeaoc/challenges/: 2015_01.html  2015_02.html  2015_03.html  2015_04.html  2015_05.html  2015_06.html  2015_07.html  2015_08.html  2015_09.html  2015_10.html  2015_11.html  2015_12.html  2015_13.html  2015_14.html  2015_15.html  2015_16.html  2015_17.html  2015_18.html  2015_19.html  2015_20.html  2015_21.html  2015_22.html  2015_23.html  2015_24.html  2015_25.html  2016_01.html  2016_02.html  2016_03.html  2016_04.html  2016_05.html  2016_06.html  2016_07.html  2016_08.html  2016_09.html  2016_10.html  2016_11.html  2016_12.html  2016_13.html  2016_14.html  2016_15.html  (+160 more)
fakeaoc/global/: 2015_01.html  2015_02.html  2015_03.html  2015_04.html  2015_05.html  2015_06.html  2015_07.html  2015_08.html  2015_09.html  2015_10.html  2015_11.html  2015_12.html  2015_13.html  2015_14.html  2015_15.html  2015_16.html  2015_17.html  2015_18.html  2015_19.html  2015_20.html  2015_21.html  2015_22.html  2015_23.html  2015_24.html  2015_25.html  2016_01.html  2016_02.html  2016_03.html  2016_04.html  2016_05.html  2016_06.html  2016_07.html  2016_08.html  2016_09.html  2016_10.html  2016_11.html  2016_12.html  2016_13.html  2016_14.html  2016_15.html  (+162 more)
fakeaoc/private/: 2015_261166.json  2016_261166.json  2017_261166.json  2018_261166.json  2019_261166.json  2020_261166.json  2021_261166.json  2022_261166-day9-continue.json  2022_261166-day9.json  2022_261166-or-backup.json  2022_261166_2.json  2022_261166_anonymous.json
src/: aoc.rs  cli.rs  client.rs  config.rs  core.rs  error.rs  lib.rs  main.rs  messaging.rs  scheduler.rs  storage.rs  utils.rs
src/aoc/: client.rs  leaderboard.rs  standings.rs
src/client/: aoc.rs  slack.rs
src/core/: commands.rs  display.rs  events.rs  leaderboard.rs  standings.rs  templates.rs
src/messaging/: client.rs  events.rs  models.rs  templates.rs
