[package]
name = "ceo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ceo"
src = "src/main.rs"

[profile.release]
# Optimize for size
opt-level = 'z'
# LTO instructs the linker to optimize at the link stage. This can, for example, remove dead code and often times reduces binary size
lto = true
# By default, Cargo specifies 16 parallel codegen units for release builds. This improves compile times, but prevents some optimizations.
codegen-units = 1
# Automatically strip symbols from the binary.
# strip = true

[dependencies]
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "yaml"] }
futures = "0.3.31"
http = "1.3.1"
itertools = "0.14.0"
minijinja = "2.10.2"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["stream", "rustls-tls"] }
rustls = "0.23.27"
scraper = "0.22.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
slack-morphism = { version = "2.12.0", features = ["hyper"] }
strum = { version = "0.26.3", features = ["derive"] }
text-to-ascii-art = "0.1.10"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.13.0"
tokio-util = { version = "0.7.15", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = "1.17.0"
